2018-10-09  Rafal Luzynski  <digitalfreak@lingonborough.com>

	[BZ #20209]
	* localedata/locales/kl_GL: (abday): Fix spelling of Sun (Sunday),
	should be "sap" rather than "sab".
	(day): Fix spelling of Sunday, should be "sapaat" rather than
	"sabaat".

2018-09-28  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #23579]
	* misc/tst-preadvwritev2-common.c (do_test_with_invalid_fd,
	do_test_with_invalid_iov): New tests.
	* misc/tst-preadvwritev2.c, misc/tst-preadvwritev64v2.c (do_test):
	Call do_test_with_invalid_fd and do_test_with_invalid_iov.
	* sysdeps/unix/sysv/linux/preadv2.c (preadv2): Use fallback code iff
	errno is ENOSYS.
	* sysdeps/unix/sysv/linux/preadv64v2.c (preadv64v2): Likewise.
	* sysdeps/unix/sysv/linux/pwritev2.c (pwritev2): Likewise.
	* sysdeps/unix/sysv/linux/pwritev64v2.c (pwritev64v2): Likewise.
	* NEWS: Add bug fixed.

2018-09-27  Andreas Schwab  <schwab@suse.de>

	[BZ #23717]
	* stdlib/tst-setcontext9.c (f1a): Make st2 static.
	(do_test): Make st1 static.

2018-09-21  H.J. Lu  <hongjiu.lu@intel.com>
	    Xuepeng Guo  <xuepeng.guo@intel.com>

	[BZ #23606]
	* sysdeps/i386/start.S: Include <sysdep.h>
	(_start): Use ENTRY/END to insert ENDBR32 at entry when CET is
	enabled.  Add cfi_undefined (eip).

2018-09-19  Wilco Dijkstra  <wdijkstr@arm.com>

	[BZ #23637]
	* string/test-strstr.c (pr23637): New function.
	(test_main): Add tests with longer needles.
	* string/strcasestr.c (AVAILABLE): Fix readahead distance.
	* string/strstr.c (AVAILABLE): Likewise.

2018-09-19  Carlos O'Donell  <carlos@redhat.com>

	* stdlib/tst-setcontext9.c (f1): Rename to...
	(f1a): ... this.
	(f1b): New function implementing lower half of f1 in alternate stack.

2018-09-20  Florian Weimer  <fweimer@redhat.com>

	* misc/tst-gethostid.c: New file.
	* misc/Makefile [$(build-shared)] (tests): Add tst-gethostid.
	(tst-gethostid): Link with -ldl.

2018-09-20  Mingli Yu  <Mingli.Yu@windriver.com>

	* sysdeps/unix/sysv/linux/gethostid.c (gethostid): Check for NULL